# freeamp

./: .cvsignore  AUTHORS  CHANGES  ChangeLog  INSTALL  Makefile-plugins.in  Makefile.am  Makefile.header.in  Makefile.in  Makefile.towav.in  NEWS  README  README.beos  README.corbaui  README.lcdui  README.linux  README.qnx  README.solaris  README.win32  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.in  decoder_speed.cpp  freeamp.cpp  install-freeamp  nulltracer.h  tracer.h
CVS/: Entries  Repository
base/: Makefile.am  Makefile.in
base/beos/src/: Makefile.am  Makefile.in  beosprefs.cpp  beosthread.cpp  bootstrap.cpp  debug.cpp  freeampapp.cpp  mutex.cpp  preferences.cpp  semaphore.cpp  utility.cpp  volume.cpp  win32impl.cpp
base/beos/src/CVS/: Entries  Repository
base/src/: .cvsignore  Makefile.am  Makefile.in  bootstrap.cpp  buffer.cpp  charstore.cpp  command.cpp  database.cpp  debug.cpp  downloadmanager.cpp  errors.cpp  freeamp  hashtable.cpp  log.cpp  metadata.cpp  missingfile.cpp  musicbrowser.cpp  musiccatalog.cpp  musicsearch.cpp  player.cpp  preferences.cpp  prefixprefs.cpp  propimpl.cpp  registrar.cpp  registry.cpp  thread.cpp  timer.cpp  undomanager.cpp  updatemanager.cpp  utility.cpp  win32impl.cpp
base/src/CVS/: Entries  Repository
base/unix/solaris/src/: Makefile  Makefile.am  Makefile.in  debug.cpp  mutex.cpp  semaphore.cpp  solaristhread.cpp  utility.cpp  volume.cpp
base/unix/solaris/src/CVS/: Repository
config/: Makefile.header  Makefile.header.in  config-beos.sh  config.beos  config.h  config.h.in  config.win32  mkinstalldirs
experimental/: Makefile.in  README.experimental  configure  configure.in
experimental/CVS/: Repository
installer/: freeamp.wse
io/: Makefile.am  Makefile.in
io/http/: Makefile.am  Makefile.in  httpbuffer.cpp  httpbuffer.h  httpinput.h
io/http/CVS/: Entries  Repository
io/http/win32/CVS/: Repository
io/http/win32/prj/: httpinput.def  httpinput.dsw  httpinput.mak
io/http/win32/prj/CVS/: Entries  Repository
io/http/win32/res/: http.rc  resource.h
io/http/win32/res/CVS/: Entries  Repository
io/local/: Makefile.am  Makefile.in  filebuffer.cpp  filebuffer.h  localfileinput.cpp  localfileinput.h  localfilelib.cpp
io/local/CVS/: Entries  Repository
io/local/beos/CVS/: Entries  Repository
io/local/beos/prj/: FileInput_cvs.proj
io/local/beos/prj/CVS/: Entries  Repository
io/local/win32/CVS/: Repository
io/local/win32/prj/: fileinput.def  fileinput.dsp  fileinput.dsw  fileinput.mak
io/local/win32/prj/CVS/: Entries  Repository
io/local/win32/res/: local.rc  resource.h
io/local/win32/res/CVS/: Entries  Repository
io/soundcard/beos/src/: Makefile.am  Makefile.in  TestRing.cpp  beosvolume.cpp  ringbuffer.cpp  ringbuffer.cpp.osf  soundcardpmo.cpp  soundcardpmo.linux.cpp  soundutils.cpp
io/soundcard/beos/src/CVS/: Entries  Repository
io/soundcard/unix/linux/src/: Makefile.am  Makefile.in  ossvolume.cpp  soundcardlib.cpp  soundcardpmo.cpp
io/soundcard/unix/linux/src/CVS/: Entries  Repository
io/src/: .cvsignore  Makefile.am  Makefile.in  eventbuffer.cpp  pipeline.cpp  pmi.cpp  pmiregistry.cpp  pmo.cpp  pmoregistry.cpp  pullbuffer.cpp  streambuffer.cpp  tstream.cpp  tstream.lo  win32volume.cpp
io/src/CVS/: Entries  Repository
lmc/: Makefile.am  Makefile.in
lmc/xingmp3/: Makefile.am  Makefile.in  cdct.c  csbt.c  csbtL3.c  csbtb.c  cup.c  cupL1.c  cupini.c  cupl3.c  cwin.c  cwinb.c  cwinm.c  dec8.c  hwin.c  icdct.c  isbt.c  isbtb.c  iup.c  iupL1.c  iupini.c  iwinQ.c  iwinbQ.c  iwinm.c  l3dq.c  l3init.c  mdct.c  mhead.c  msis.c  towave.c  uph.c  upsf.c  wavep.c  wcvt.c  xinglmc.cpp
lmc/xingmp3/CVS/: Entries  Repository
lmc/xingmp3/beos/CVS/: Repository
lmc/xingmp3/beos/prj/: XingMP3_cvs.proj
lmc/xingmp3/beos/prj/CVS/: Entries  Repository
lmc/xingmp3/include/: L3.h  htable.h  itype.h  jdw.h  mhead.h  port.h  tableawd.h  xinglmc.h
lmc/xingmp3/include/CVS/: Entries  Repository
lmc/xingmp3/src/: .cvsignore  Makefile.am  Makefile.in  cdct.c  cdctasm.asm  csbt.c  csbtL3.c  csbtb.c  cup.c  cupL1.c  cupini.c  cupl3.c  cwin.c  cwin8asm.asm  cwinasm.asm  cwinb.c  cwinm.c  dec8.c  hwin.c  icdct.c  isbt.c  isbtb.c  iup.c  iupL1.c  iupini.c  iwinQ.c  iwinbQ.c  iwinm.c  l3dq.c  l3init.c  mdct.c  mdctasm.asm  mhead.c  msis.c  msisasm.asm  sigapp.c  sigmain.cpp  sigmp3.cpp  sigmp3.h  towave.c  (+10 more)
lmc/xingmp3/src/CVS/: Entries  Repository
lmc/xingmp3/win32/CVS/: Repository
lmc/xingmp3/win32/include/CVS/: Repository
lmc/xingmp3/win32/prj/: xing.def  xing.dsp  xing.mak
lmc/xingmp3/win32/prj/CVS/: Entries  Repository
lmc/xingmp3/win32/res/: resource.h  xing.rc
lmc/xingmp3/win32/res/CVS/: Entries  Repository
lmc/xingmp3/win32/src/CVS/: Repository
themes/: Aquatica.fat  EMusic.fat  (+8 more)
ui/cmdline/: CommandLineCIO.cpp  CommandLineCIO.h  CommandLineCOO.h  Makefile.am  Makefile.in  Mpg123UI.cpp  Mpg123UI.h  cmdlineUI.cpp  cmdlineUI.h  cmdlinecoo.cpp  consoleCIO.cpp  consoleCOO.cpp
ui/cmdline/CVS/: Entries  Repository
ui/cmdline/win32/CVS/: Entries  Repository
ui/cmdline/win32/include/: consoleCIO.h  consoleCOO.h
ui/cmdline/win32/include/CVS/: Entries  Repository
ui/cmdline/win32/prj/: console.dsp
ui/cmdline/win32/prj/CVS/: Entries  Repository
ui/cmdline/win32/src/: consoleCIO.cpp  consoleCOO.cpp
ui/cmdline/win32/src/CVS/: Entries  Repository
ui/freeamp/unix/src/: GTKBitmap.cpp  GTKCanvas.cpp  GTKFileSelector.cpp  GTKFont.cpp  GTKMessageDialog.cpp  GTKPreferenceWindow.cpp  GTKUtility.cpp  GTKWindow.cpp  Makefile.am  Makefile.in  ThemeManager.cpp  fawindow.cpp  freeamp.cpp  res.cpp  ttfont.c  ttfont.cpp  windowhash.cpp
ui/freeamp/unix/src/CVS/: Entries  Repository
ui/gtk/: Makefile.am  Makefile.in  freeamp-gtk.cpp  freeamp-gtk.h
ui/gtk/CVS/: Repository
ui/lcd/src/: Makefile.am  Makefile.in  MtxOrb.c  drv_base.c  lcd.c  lcdui.cpp  sockets.c
ui/lcd/src/CVS/: Entries  Repository
ui/mpg123/: Makefile.am  Makefile.in  Mpg123UI.cpp  Mpg123UI.h
ui/mpg123/CVS/: Entries  Repository
ui/src/: Makefile.am  Makefile.in  uiregistry.cpp
ui/src/CVS/: Repository
(+1819 files in other folders)
